<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="@string/pref_default_site_id"
        android:inputType="text"
        android:key="siteid"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_site_id"/>

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="enable_lifecycle"
        android:title="@string/pref_title_lifecycle"/>

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="enable_background"
        android:title="@string/pref_title_background"/>

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="enable_wifi"
        android:title="@string/pref_title_wifi_only"/>

</PreferenceScreen>
