<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="co.signal.commerce.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general"/>

    <header
        android:fragment="co.signal.commerce.SettingsActivity$ControlsPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_controls"/>

    <header
        android:fragment="co.signal.commerce.SettingsActivity$StandardFieldPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_user_fields"/>

    <header
        android:fragment="co.signal.commerce.SettingsActivity$LoggingPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_logging"/>


</preference-headers>
