<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="86400"
        android:entries="@array/pref_msg_expiration_titles"
        android:entryValues="@array/pref_msg_expiration_values"
        android:key="msg_expiration"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_msg_expiration"/>

    <ListPreference
        android:defaultValue="1000"
        android:entries="@array/pref_msg_max_queued_values"
        android:entryValues="@array/pref_msg_max_queued_values"
        android:key="msg_max_queued"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_msg_max_queued"/>

    <ListPreference
        android:defaultValue="3"
        android:entries="@array/pref_msg_retry_count_values"
        android:entryValues="@array/pref_msg_retry_count_values"
        android:key="msg_retry_count"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_msg_retry_count"/>

    <ListPreference
        android:defaultValue="20"
        android:entries="@array/pref_battery_values"
        android:entryValues="@array/pref_battery_values"
        android:key="battery_percentage"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_battery"/>

    <ListPreference
        android:defaultValue="30"
        android:entries="@array/pref_dispatch_interval_values"
        android:entryValues="@array/pref_dispatch_interval_values"
        android:key="dispatch_interval"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_dispatch_interval"/>

    <ListPreference
        android:defaultValue="10000"
        android:entries="@array/pref_socket_to_values"
        android:entryValues="@array/pref_socket_to_values"
        android:key="socket_connect_to"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_socket_connect_to"/>

    <ListPreference
        android:defaultValue="5000"
        android:entries="@array/pref_socket_to_values"
        android:entryValues="@array/pref_socket_to_values"
        android:key="socket_read_to"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_socket_read_to"/>

</PreferenceScreen>
